force-app/main/default/objects/Error_Log__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>This field contains brief error message occurred during an operation</description>
    <inlineHelpText>This field is auto populated &amp; contains brief exception detail</inlineHelpText>
    <label>Error Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>