force-app/main/default/objects/Error_Log__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>This field contains the name of the object for which the exception occured</description>
    <inlineHelpText>This field is auto populated &amp; contains name of the object for which exception occurred</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>