force-app/main/default/objects/Error_Log__c/fields/Short_Error__c.field-meta.xml
<CustomField>
    <fullName>Short_Error__c</fullName>
    <description>This field is used record short description of the error occurred during a operation</description>
    <inlineHelpText>This field is auto populated &amp; contains short description of error</inlineHelpText>
    <label>Short Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>